// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures/expression/left-hand-side-expression/ call expression after new expression 1`] = `
{
  "body": [
    {
      "end": {
        "col": 16,
        "index": 15,
        "row": 1,
      },
      "expr": {
        "arguments": [],
        "callee": {
          "computed": false,
          "end": {
            "col": 14,
            "index": 13,
            "row": 1,
          },
          "kind": 10167,
          "object": {
            "arguments": [],
            "callee": {
              "end": {
                "col": 8,
                "index": 7,
                "row": 1,
              },
              "kind": 10117,
              "name": "foo",
              "start": {
                "col": 5,
                "index": 4,
                "row": 1,
              },
            },
            "end": {
              "col": 10,
              "index": 9,
              "row": 1,
            },
            "kind": 10166,
            "start": {
              "col": 1,
              "index": 0,
              "row": 1,
            },
          },
          "optional": false,
          "property": {
            "end": {
              "col": 14,
              "index": 13,
              "row": 1,
            },
            "kind": 10117,
            "name": "bar",
            "start": {
              "col": 11,
              "index": 10,
              "row": 1,
            },
          },
          "start": {
            "col": 10,
            "index": 9,
            "row": 1,
          },
        },
        "end": {
          "col": 16,
          "index": 15,
          "row": 1,
        },
        "kind": 10170,
        "optional": false,
        "start": {
          "col": 14,
          "index": 13,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 14,
        "index": 13,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ call expression with cover expression 1`] = `
{
  "body": [
    {
      "end": {
        "col": 14,
        "index": 13,
        "row": 1,
      },
      "expr": {
        "arguments": [],
        "callee": {
          "end": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
          "kind": 10117,
          "name": "foo",
          "start": {
            "col": 6,
            "index": 5,
            "row": 1,
          },
        },
        "end": {
          "col": 14,
          "index": 13,
          "row": 1,
        },
        "kind": 10170,
        "optional": false,
        "start": {
          "col": 9,
          "index": 8,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 9,
        "index": 8,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ member expression with computed property 1`] = `
{
  "body": [
    {
      "end": {
        "col": 39,
        "index": 38,
        "row": 1,
      },
      "expr": {
        "computed": true,
        "end": {
          "col": 39,
          "index": 38,
          "row": 1,
        },
        "kind": 10167,
        "object": {
          "end": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
          "kind": 10117,
          "name": "universe",
          "start": {
            "col": 1,
            "index": 0,
            "row": 1,
          },
        },
        "optional": false,
        "property": {
          "end": {
            "col": 38,
            "index": 37,
            "row": 1,
          },
          "exprs": [
            {
              "end": {
                "col": 20,
                "index": 19,
                "row": 1,
              },
              "kind": 10117,
              "name": "galaxyName",
              "start": {
                "col": 10,
                "index": 9,
                "row": 1,
              },
            },
            {
              "end": {
                "col": 38,
                "index": 37,
                "row": 1,
              },
              "kind": 10117,
              "name": "otherUselessName",
              "start": {
                "col": 22,
                "index": 21,
                "row": 1,
              },
            },
          ],
          "kind": 10177,
          "start": {
            "col": 10,
            "index": 9,
            "row": 1,
          },
        },
        "start": {
          "col": 9,
          "index": 8,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 9,
        "index": 8,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ nested new expression 1`] = `
{
  "body": [
    {
      "end": {
        "col": 12,
        "index": 11,
        "row": 1,
      },
      "expr": {
        "arguments": [],
        "callee": {
          "end": {
            "col": 10,
            "index": 9,
            "row": 1,
          },
          "kind": 10117,
          "name": "T",
          "start": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
        },
        "end": {
          "col": 12,
          "index": 11,
          "row": 1,
        },
        "kind": 10166,
        "start": {
          "col": 5,
          "index": 4,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 5,
        "index": 4,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ nested new expression without argument 1`] = `
{
  "body": [
    {
      "end": {
        "col": 10,
        "index": 9,
        "row": 1,
      },
      "expr": {
        "arguments": [],
        "callee": {
          "end": {
            "col": 10,
            "index": 9,
            "row": 1,
          },
          "kind": 10117,
          "name": "T",
          "start": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
        },
        "end": {
          "col": 10,
          "index": 9,
          "row": 1,
        },
        "kind": 10166,
        "start": {
          "col": 5,
          "index": 4,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 5,
        "index": 4,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ new expression with cover expression callee 1`] = `
{
  "body": [
    {
      "end": {
        "col": 17,
        "index": 16,
        "row": 1,
      },
      "expr": {
        "arguments": [],
        "callee": {
          "computed": false,
          "end": {
            "col": 15,
            "index": 14,
            "row": 1,
          },
          "kind": 10167,
          "object": {
            "arguments": [],
            "callee": {
              "end": {
                "col": 10,
                "index": 9,
                "row": 1,
              },
              "kind": 10117,
              "name": "foo",
              "start": {
                "col": 7,
                "index": 6,
                "row": 1,
              },
            },
            "end": {
              "col": 10,
              "index": 9,
              "row": 1,
            },
            "kind": 10166,
            "start": {
              "col": 3,
              "index": 2,
              "row": 1,
            },
          },
          "optional": false,
          "property": {
            "end": {
              "col": 15,
              "index": 14,
              "row": 1,
            },
            "kind": 10117,
            "name": "bar",
            "start": {
              "col": 12,
              "index": 11,
              "row": 1,
            },
          },
          "start": {
            "col": 11,
            "index": 10,
            "row": 1,
          },
        },
        "end": {
          "col": 17,
          "index": 16,
          "row": 1,
        },
        "kind": 10170,
        "optional": false,
        "start": {
          "col": 15,
          "index": 14,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 15,
        "index": 14,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ new expression with member computed subscription 1`] = `
{
  "body": [
    {
      "end": {
        "col": 13,
        "index": 12,
        "row": 1,
      },
      "expr": {
        "arguments": [],
        "callee": {
          "computed": true,
          "end": {
            "col": 13,
            "index": 12,
            "row": 1,
          },
          "kind": 10167,
          "object": {
            "end": {
              "col": 8,
              "index": 7,
              "row": 1,
            },
            "kind": 10117,
            "name": "foo",
            "start": {
              "col": 5,
              "index": 4,
              "row": 1,
            },
          },
          "optional": false,
          "property": {
            "end": {
              "col": 12,
              "index": 11,
              "row": 1,
            },
            "kind": 10117,
            "name": "bar",
            "start": {
              "col": 9,
              "index": 8,
              "row": 1,
            },
          },
          "start": {
            "col": 8,
            "index": 7,
            "row": 1,
          },
        },
        "end": {
          "col": 13,
          "index": 12,
          "row": 1,
        },
        "kind": 10166,
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ new expression with member expression callee 1`] = `
{
  "body": [
    {
      "end": {
        "col": 14,
        "index": 13,
        "row": 1,
      },
      "expr": {
        "arguments": [],
        "callee": {
          "computed": false,
          "end": {
            "col": 12,
            "index": 11,
            "row": 1,
          },
          "kind": 10167,
          "object": {
            "end": {
              "col": 8,
              "index": 7,
              "row": 1,
            },
            "kind": 10117,
            "name": "foo",
            "start": {
              "col": 5,
              "index": 4,
              "row": 1,
            },
          },
          "optional": false,
          "property": {
            "end": {
              "col": 12,
              "index": 11,
              "row": 1,
            },
            "kind": 10117,
            "name": "bar",
            "start": {
              "col": 9,
              "index": 8,
              "row": 1,
            },
          },
          "start": {
            "col": 8,
            "index": 7,
            "row": 1,
          },
        },
        "end": {
          "col": 14,
          "index": 13,
          "row": 1,
        },
        "kind": 10166,
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ simple call expression 1`] = `
{
  "body": [
    {
      "end": {
        "col": 14,
        "index": 13,
        "row": 1,
      },
      "expr": {
        "arguments": [
          {
            "end": {
              "col": 8,
              "index": 7,
              "row": 1,
            },
            "kind": 10117,
            "name": "bar",
            "start": {
              "col": 5,
              "index": 4,
              "row": 1,
            },
          },
          {
            "end": {
              "col": 13,
              "index": 12,
              "row": 1,
            },
            "kind": 10117,
            "name": "baz",
            "start": {
              "col": 10,
              "index": 9,
              "row": 1,
            },
          },
        ],
        "callee": {
          "end": {
            "col": 4,
            "index": 3,
            "row": 1,
          },
          "kind": 10117,
          "name": "foo",
          "start": {
            "col": 1,
            "index": 0,
            "row": 1,
          },
        },
        "end": {
          "col": 14,
          "index": 13,
          "row": 1,
        },
        "kind": 10170,
        "optional": false,
        "start": {
          "col": 4,
          "index": 3,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 4,
        "index": 3,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ simple member expression - 2 1`] = `
{
  "body": [
    {
      "end": {
        "col": 30,
        "index": 29,
        "row": 1,
      },
      "expr": {
        "computed": false,
        "end": {
          "col": 30,
          "index": 29,
          "row": 1,
        },
        "kind": 10167,
        "object": {
          "computed": false,
          "end": {
            "col": 18,
            "index": 17,
            "row": 1,
          },
          "kind": 10167,
          "object": {
            "end": {
              "col": 9,
              "index": 8,
              "row": 1,
            },
            "kind": 10117,
            "name": "universe",
            "start": {
              "col": 1,
              "index": 0,
              "row": 1,
            },
          },
          "optional": false,
          "property": {
            "end": {
              "col": 18,
              "index": 17,
              "row": 1,
            },
            "kind": 10117,
            "name": "milkyway",
            "start": {
              "col": 10,
              "index": 9,
              "row": 1,
            },
          },
          "start": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
        },
        "optional": false,
        "property": {
          "end": {
            "col": 30,
            "index": 29,
            "row": 1,
          },
          "kind": 10117,
          "name": "solarsystem",
          "start": {
            "col": 19,
            "index": 18,
            "row": 1,
          },
        },
        "start": {
          "col": 18,
          "index": 17,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 18,
        "index": 17,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ simple member expression - 3 1`] = `
{
  "body": [
    {
      "end": {
        "col": 36,
        "index": 35,
        "row": 1,
      },
      "expr": {
        "computed": false,
        "end": {
          "col": 36,
          "index": 35,
          "row": 1,
        },
        "kind": 10167,
        "object": {
          "computed": false,
          "end": {
            "col": 30,
            "index": 29,
            "row": 1,
          },
          "kind": 10167,
          "object": {
            "computed": false,
            "end": {
              "col": 18,
              "index": 17,
              "row": 1,
            },
            "kind": 10167,
            "object": {
              "end": {
                "col": 9,
                "index": 8,
                "row": 1,
              },
              "kind": 10117,
              "name": "universe",
              "start": {
                "col": 1,
                "index": 0,
                "row": 1,
              },
            },
            "optional": false,
            "property": {
              "end": {
                "col": 18,
                "index": 17,
                "row": 1,
              },
              "kind": 10117,
              "name": "milkyway",
              "start": {
                "col": 10,
                "index": 9,
                "row": 1,
              },
            },
            "start": {
              "col": 9,
              "index": 8,
              "row": 1,
            },
          },
          "optional": false,
          "property": {
            "end": {
              "col": 30,
              "index": 29,
              "row": 1,
            },
            "kind": 10117,
            "name": "solarsystem",
            "start": {
              "col": 19,
              "index": 18,
              "row": 1,
            },
          },
          "start": {
            "col": 18,
            "index": 17,
            "row": 1,
          },
        },
        "optional": false,
        "property": {
          "end": {
            "col": 36,
            "index": 35,
            "row": 1,
          },
          "kind": 10117,
          "name": "Earth",
          "start": {
            "col": 31,
            "index": 30,
            "row": 1,
          },
        },
        "start": {
          "col": 30,
          "index": 29,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 30,
        "index": 29,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ simple member expression 1`] = `
{
  "body": [
    {
      "end": {
        "col": 18,
        "index": 17,
        "row": 1,
      },
      "expr": {
        "computed": false,
        "end": {
          "col": 18,
          "index": 17,
          "row": 1,
        },
        "kind": 10167,
        "object": {
          "end": {
            "col": 9,
            "index": 8,
            "row": 1,
          },
          "kind": 10117,
          "name": "universe",
          "start": {
            "col": 1,
            "index": 0,
            "row": 1,
          },
        },
        "optional": false,
        "property": {
          "end": {
            "col": 18,
            "index": 17,
            "row": 1,
          },
          "kind": 10117,
          "name": "milkyway",
          "start": {
            "col": 10,
            "index": 9,
            "row": 1,
          },
        },
        "start": {
          "col": 9,
          "index": 8,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 9,
        "index": 8,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ simple new expression 1`] = `
{
  "body": [
    {
      "end": {
        "col": 11,
        "index": 10,
        "row": 1,
      },
      "expr": {
        "arguments": [],
        "callee": {
          "end": {
            "col": 11,
            "index": 10,
            "row": 1,
          },
          "kind": 10117,
          "name": "Button",
          "start": {
            "col": 5,
            "index": 4,
            "row": 1,
          },
        },
        "end": {
          "col": 11,
          "index": 10,
          "row": 1,
        },
        "kind": 10166,
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;

exports[`fixtures/expression/left-hand-side-expression/ simple new expression without arugments 1`] = `
{
  "body": [
    {
      "end": {
        "col": 13,
        "index": 12,
        "row": 1,
      },
      "expr": {
        "arguments": [],
        "callee": {
          "end": {
            "col": 11,
            "index": 10,
            "row": 1,
          },
          "kind": 10117,
          "name": "Button",
          "start": {
            "col": 5,
            "index": 4,
            "row": 1,
          },
        },
        "end": {
          "col": 13,
          "index": 12,
          "row": 1,
        },
        "kind": 10166,
        "start": {
          "col": 1,
          "index": 0,
          "row": 1,
        },
      },
      "kind": 10178,
      "start": {
        "col": 1,
        "index": 0,
        "row": 1,
      },
    },
  ],
  "kind": 10120,
}
`;
